# spotify-to-plex

./: .dockerignore  .gitignore  Dockerfile  Lidarrtesting.py  README.md  Spotiplex.py  compose.yaml  config.toml  data_file.json  default.env  entrypoint.sh  generate_crontab.sh  main.py  pyproject.toml  requirements.txt  ruff.toml  setup.sh  spotify-playlist-importer.py  spotiplex.py
.github/: FUNDING.yml
.github/workflows/: add_todo.yml  docker-image.yml  stale.yml
app/: __init__.py  auth.py  db.py  schema.sql
app/templates/: base.html.j2
app/templates/app/: index.html.j2
app/templates/auth/: login.html.j2  register.html.j2
current-version/: default.env  main.py  spotiplex.py
doc/: default.env  default_config.toml
electron-version/: main.js  package-lock.json  package.json
instance/: spotiplex.sqlite
libs/current-version/: main.py  requirements.txt  spotiplex.py
libs/legacy/: spotify-playlist-importer.py
old/: main.py
python-ver/: pyproject.toml
python-ver/spotiplex/: main.py
spotiplex/: Home.py  __init__.py  config.py  confighandler.py  lidarr.py  main.py  manage.py  plex.py  requirements.txt  spotify.py  spotify2.py  test.py  testing.py  web_ui.py
spotiplex/app/: main.py
spotiplex/modules/config/: confighandler.py
spotiplex/old/: config.py  main.py
spotiplex/pages/: Status.py  Sync.py
spotiplex/playlistconverter/: apps.py  splex.py  urls.py  views.py
spotiplex/spotiplex/: asgi.py  settings.py  urls.py  wsgi.py
spotiplex/templates/: base.html.j2  index.html.j2  playlists.html.j2  settings.html.j2  support.html.j2  sync.html.j2
(+15 files in other folders)
