[tool.poetry]
name = "spotiplex"
version = "1.0.0"
description = ""
authors = ["0xChloe <chloe@catastrophesoftware.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
PlexAPI = "^4.15.13"
spotipy = "^2.24.0"
rtoml = "^0.12.0"
typer = "^0.12.3"
rich = "^13.7.1"
loguru = "^0.7.2"

[tool.poetry.scripts]
spotiplex = "spotiplex.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
